config/network-policy/allow-ingress-webhook.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kyma-project.io--registry-cache-allow-webhook-traffic
  namespace: system
  labels:
    app.kubernetes.io/name: registry-cache
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/module: registry-cache
    purpose: webhook-traffic
spec:
  podSelector:
    matchLabels:
      control-plane: controller-manager
      app.kubernetes.io/name: registry-cache
  policyTypes:
    - Ingress
  ingress:
    - from: []
      ports:
        - port: 9443
          protocol: TCP
